[package]
authors = ["RcCreeperTech <devinprothero@gmail.com>"]
edition = "2018"
name = "rust-wasm-tests"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.44"
lazy_static = "1.4.0"
nalgebra = "0.21.1"
wasm-bindgen = "0.2.67"

[dependencies.web-sys]
features = [
  "Document",
  "Element",
  "EventTarget",
  "HtmlCanvasElement",
  "MouseEvent",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlUniformLocation",
  "Window",
]
version = "0.3"
